<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls"
        tools:context="com.alexandruro.whistscoretracker.activity.NewGameActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/appbar_elevation"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/game_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="90dp"
            android:text="@string/new_game_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <RadioButton
                android:id="@+id/radioGameTypeOneEightOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/new_game_type_181"
                app:layout_constraintBaseline_toBaselineOf="@+id/radioGameTypeEightOneEight"
                app:layout_constraintStart_toStartOf="@+id/textView" />

            <RadioButton
                android:id="@+id/radioGameTypeEightOneEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/new_game_type_818"
                app:layout_constraintStart_toEndOf="@+id/radioGameTypeOneEightOne"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/new_game_prize"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <RadioButton
                android:id="@+id/radioPrizeNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game_prize_0"
                app:layout_constraintBaseline_toBaselineOf="@+id/radioPrize5"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2" />

            <RadioButton
                android:id="@+id/radioPrize5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="26dp"
                android:checked="true"
                android:text="@string/new_game_prize_5"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/radioPrizeNone" />

            <RadioButton
                android:id="@+id/radioPrize10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="false"
                android:text="@string/new_game_prize_10"
                app:layout_constraintBaseline_toBaselineOf="@+id/radioPrize5"
                app:layout_constraintStart_toEndOf="@+id/radioPrize5" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/new_game_players"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/Widget.App.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/add_player"
            android:onClick="addName"
            app:icon="@drawable/ic_add_black_24dp"
            app:layout_constraintTop_toTopOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.alexandruro.whistscoretracker.view.WrappedListView
            android:id="@+id/nameListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:onClick="startGame"
            android:text="@string/new_game_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameListView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>